--- a/index.html
+++ b/index.html
@@ -1,30 +1,32 @@
 <!doctype html>
 <html>
- <head>
+<head>
  <title>Amazeriffic</title>
- </head>
+ <link rel="stylesheet" type="text/css" href="reset.css">
+ <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
  <body>
-<header>
+ <header>
  <h1>Amazeriffic</h1>
  <nav>
  <a href="#">Sign Up!</a> |
  <a href="#">FAQ</a> |
  <a href="#">Support</a>
-</nav>
+ </nav>
  </header>
  <main>
-<h2>Amazeriffic will change your life!</h2>
+ <h2>Amazeriffic will change your life!</h2>
  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
  eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
- <h3>Here's why you need Amazeriffic</h3>
+
+<h3>Here's why you need Amazeriffic</h3>
  <ul>
  <li>It fits your lifestyle</li>
  <li>It's awesome</li>
  <li>It rocks your world</li>
  </ul>
- <img src="lightbulb.png" alt="an image of a lightbulb">
-
- 	
+ <img src="lightbulb.png">
  </main>
  <footer>
  <div class="contact">
@@ -46,3 +48,4 @@
  </div>
  </footer>
  </body>
+</html>
