Appending JSON to the DOM

--- a/AJAX/index.html
+++ b/AJAX/index.html
@@ -5,6 +5,10 @@
  <body>
  <h1>Hi</h1>
 
+ <main>
+   
+ </main>
+
  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.js"></script>
  <script src="app.js"></script>
  </body>
